메인페이지 절반정도 만듬
후..변수명이 항상 고민...

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,10 +21,8 @@
     -->
     <title>React App</title>
     <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
+      *{ box-sizing: border-box; }
+      body { margin: 0; padding: 0; }
     </style>
   </head>
   <body>
